--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="script.js"></script>
 
 </head>
 <body>
-    
+
+    <button id="rock">ROCK</button>
+    <button id="scissors">SCISSORS</button>
+    <button id="paper">PAPER</button>
+
+
+    <script src="script.js"></script>
+
 </body>
 </html>
