first revision done

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
 </head>
 <body>
-
+    <div id="buttonsContainter">
     <button id="rock">ROCK</button>
     <button id="scissors">SCISSORS</button>
     <button id="paper">PAPER</button>
-
+    </div>
+    <div id="scoreBoard"></div>
 
     <script src="script.js"></script>
 
